testing jumping j fix

--- a/portfolio/portfolio_5.0/work/dance/dance.css
+++ b/portfolio/portfolio_5.0/work/dance/dance.css
@@ -1,49 +1,50 @@
 body
 {
-    overflow: hidden;
+/*    overflow: hidden;*/
     background-color: #333;
     height: 100%;
-    width: 100%;
+    width: 90%;
     transform: scale(0.25);
     -webkit-transform: scale(0.25);
     -moz-transform: scale(0.25);
     margin: 0 auto;
     text-align: center;
-    position: absolute;
-    bottom: 150px; left: 0; right: 0;
+/*    background-color: green;*/
+    overflow: hidden;
 }
 
 #container
 {
 	margin: auto;
-    width: 1000px;
-    height: 700px;
+    width: 500px;
+    height: 500px;
     position: absolute;
-    left: 0; right: 0;
+/*    background-color: red;*/
+
 
     -webkit-animation-iteration-count:infinite;
     -webkit-animation-timing-function:ease-in-out;
     -webkit-animation-name:jump;
     -webkit-animation-direction:alternate-reverse;
     -webkit-animation-duration:0.7s;
-    -webkit-transform-origin:0% 100%;
+    -webkit-transform-origin:50% 100%;
 
     -moz-animation-iteration-count:infinite;
     -moz-animation-timing-function:ease-in-out;
     -moz-animation-name:jump;
     -moz-animation-direction:alternate-reverse;
     -moz-animation-duration:0.7s;
-    -moz-transform-origin:0% 100%;
+    -moz-transform-origin:50% 100%;
 }
 
 @-webkit-keyframes jump { 
-from { -webkit-transform:translate(0px,0px) } 
-to { -webkit-transform:translate(0px,1200px) } 
+from { -webkit-transform:translate(0px,-400px) } 
+to { -webkit-transform:translate(0px,500px) } 
 }
 
 @-moz-keyframes jump { 
-from { -moz-transform:translate(0px,0px) } 
-to { -moz-transform:translate(0px,1200px) } 
+from { -moz-transform:translate(0px,-400px) } 
+to { -moz-transform:translate(0px,500px) } 
 }
 
 #head
